# zero-2-prod

./: Cargo.toml  Dockerfile  init_db.sh
.cargo/: cargo.toml
.sqlx/: query-659ebc0b904f1b3466fc10de9007761a5c5f24c950039a7495aaa3b37fbbe0fc.json
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
